# corenous

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup_app.py
assets/: Corenous.icns
config/: settings.yaml
scripts/: build_app.sh  build_icon.sh  setup_permissions.sh
src/: bundle_entry.py  paths.py
src/agent/: __init__.py  mcp_server.py
src/ai/: __init__.py  llm.py  remote_llm.py  remote_summary.py  summarizer.py
src/app/: app_controller.py  hotkey_launcher.py  main.py  overlay.py  overlay_content.py  overlay_text.py  search_combo.py  search_engine.py  share_card.py  ui_constants.py
src/cli/: context.py  daemon_ctl.py  hotkey_ctl.py  list_cmds.py  main.py  query.py  vault_cli.py
src/digest/: __init__.py  scheduler.py
src/memory/: content_cache.py  embedder.py  search.py  store.py  summaries.py  vector_cache.py
src/monitor/: app_context.py  (+5 more)
tests/: test_assistant_topic.py  test_chrome_filter.py  test_cli_listing.py  test_clipboard_first_poll.py  test_daemon_freshness.py  test_daemon_start_verification.py  test_digest_scheduler.py  test_heading_paraphrase.py  test_mcp_error_codes.py  test_memories_changed_today.py  test_memories_digest.py  test_memories_sessions.py  test_notifier_threading.py  test_ocr_chrome_regions.py  test_ocr_echo_fallback.py  test_orphan_bullet_promotion.py  test_orphan_ui_prompt.py  test_permissions.py  test_regenerate_affected.py  test_regenerate_by_id.py  test_routines.py  test_sentence_breaks.py  test_vault_sentinel.py  test_web_subject_github.py  test_web_subject_youtube.py  test_window_signature.py
(+9 files in other folders)
